--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!doctype html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="theme-color" content="#1e3a8a" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Rounds" />
-    <link rel="apple-touch-icon" href="/icon.svg" />
-    <title>Rounds TecSalud</title>
-  </head>
-  <body class="bg-slate-100 text-slate-900 safe-area-bottom">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<!doctype html><html lang="es"><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Rounds TecSalud</title></head><body class="bg-slate-100 text-slate-900"><div id="root"></div><script type="module" src="/src/main.jsx"></script></body></html>
