--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#0f172a" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>Urología Tecsalud</title>
+    <title>Urología TecSalud</title>
   </head>
-  <body class="bg-slate-100 text-slate-900 safe-area-bottom">
+  <body class="bg-slate-900 text-slate-100 safe-area-bottom">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
