--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>Urología Tecsalud</title>
+    <title>Urología TecSalud</title>
   </head>
-  <body class="bg-slate-100 text-slate-900 safe-area-bottom">
+  <body class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-100 safe-area-bottom transition-colors duration-500">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
