--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>Urología Tecsalud</title>
   </head>
-  <body class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-100 safe-area-bottom transition-colors duration-500">
+  <body class="bg-gray-50 dark:bg-slate-900 text-slate-900 dark:text-slate-100 safe-area-bottom transition-colors duration-500">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
