--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>Urología Tecsalud</title>
+    <title>Urología TecSalud</title>
   </head>
   <body class="bg-gray-50 dark:bg-slate-900 text-slate-900 dark:text-slate-100 safe-area-bottom transition-colors duration-500">
     <div id="root"></div>
