--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!doctype html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>Urología Tecsalud</title>
-  </head>
-  <body class="bg-gray-100 dark:bg-slate-900 text-slate-900 dark:text-slate-100 safe-area-bottom transition-colors duration-500">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<!doctype html><html lang="es"><head><meta charset="UTF-8" /><link rel="icon" type="image/svg+xml" href="/icon.svg" /><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" /><meta name="theme-color" content="#000000" /><meta name="apple-mobile-web-app-capable" content="yes" /><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" /><title>Urología Tecsalud</title></head><body class="bg-gray-100 dark:bg-slate-900 text-slate-900 dark:text-slate-100 safe-area-bottom transition-colors duration-500"><div id="root"></div><script type="module" src="/src/main.jsx"></script></body></html>
